# Cancer-Prediction-mm2921

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yaml
docs/: mkdocs.yml
src/cancer_prediction_mm2921/: streamlit_app.py
src/cancer_prediction_mm2921/scripts/: app.py
tests/: test_CancerModel.py
