[project]
name = "cancer_prediction_mm2921"
authors = [{name = "MarvelManoharan"}]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "scikit-learn>=1.3.2",
    "streamlit>=1.55.0",
]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "flake8>=5.0.4",
    "isort>=5.13.2",
    "mipy>=0.0.1",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=1.0.3",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
]



[project.scripts]
cancer-prediction = "cancer_prediction_mm2921.scripts.app:cli"
train = "cancer_prediction_mm2921.scripts.app:train"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.black]
line-length = 88
exclude = '''
/(
      .eggs         
    | .git          
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''


[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
virtual_env = ".venv"


- name: Create Release
  uses: actions/create-release@v1
  env:
    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
  with:
      tag_name: ${{ github.ref }}
      release_name: Release ${{ steps.get_version.outputs.version }}
      body: Release ${{ steps.get_version.outputs.version }}
      draft: false
      prerelease: false

- name: Publish to TestPyPI
  run: |
      uv publish --publish-url https://test.pypi.org/legacy/ \
        --username __token__ \
        --password ${{ secrets.TEST_PYPI_API_TOKEN }}


